name:                   sjsp
version:                0.0.0
author:                 itchyny <https://github.com/itchyny>
maintainer:             itchyny <https://github.com/itchyny>
license:                MIT
license-file:           LICENSE
category:               Compiler
build-type:             Simple
cabal-version:          >=1.2

executable sjsp
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Injector
                      , Profiler
                      , Config
  build-depends:        base >= 4.0
                      , ghc-prim
                      , syb >= 0.4
                      , language-javascript
                      , bytestring >= 0.10.6
                      , filepath
                      , blaze-builder >= 0.3.3
                      , unordered-containers
  build-tools:          happy >= 1.19, alex >= 3.1
